syntax.output
State 0 conflicts: 1 shift/reduce
State 6 conflicts: 1 shift/reduce
State 28 conflicts: 1 shift/reduce
State 32 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList
    2        | ExtDefList error

    3 ExtDefList: ExtDef ExtDefList
    4           | %empty

    5 ExtDef: Specifier ExtDecList SEMI
    6       | Specifier SEMI
    7       | Specifier FunDec CompSt

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag
   14                | error Tag

   15 OptTag: ID
   16       | %empty

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB
   20       | VarDec LB error RB

   21 FunDec: ID LP VarList RP
   22       | ID LP RP

   23 VarList: ParamDec COMMA VarList
   24        | ParamDec

   25 ParamDec: Specifier VarDec

   26 CompSt: LC DefList StmtList RC
   27       | error RC

   28 StmtList: Stmt StmtList
   29         | %empty

   30 Stmt: Exp SEMI
   31     | CompSt
   32     | RETURN Exp SEMI
   33     | IF LP Exp RP Stmt
   34     | IF LP Exp RP Stmt ELSE Stmt
   35     | WHILE LP Exp RP Stmt
   36     | error SEMI

   37 DefList: Def DefList
   38        | %empty

   39 Def: Specifier DecList SEMI
   40    | Specifier DecList error
   41    | Specifier error SEMI

   42 DecList: Dec
   43        | Dec COMMA DecList

   44 Dec: VarDec
   45    | VarDec ASSIGNOP Exp
   46    | VarDec ASSIGNOP error

   47 Exp: Exp ASSIGNOP Exp
   48    | Exp AND Exp
   49    | Exp OR Exp
   50    | Exp RELOP Exp
   51    | Exp PLUS Exp
   52    | Exp MINUS Exp
   53    | Exp STAR Exp
   54    | Exp DIV Exp
   55    | LP Exp RP
   56    | MINUS Exp
   57    | NOT Exp
   58    | ID LP Args RP
   59    | ID LP RP
   60    | Exp LB Exp RB
   61    | Exp DOT ID
   62    | ID
   63    | INT
   64    | FLOAT
   65    | error RP
   66    | Exp LB error RB
   67    | Exp ASSIGNOP error

   68 Args: Exp COMMA Args
   69     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 2 14 20 27 36 40 41 46 65 66 67
    INT <type_int> (258) 19 63
    FLOAT <type_float> (259) 64
    ID <type_string> (260) 15 17 18 21 22 58 59 61 62
    TYPE <type_string> (261) 10
    PLUS (262) 51
    MINUS (263) 52 56
    STAR (264) 53
    DIV (265) 54
    SEMI (266) 5 6 30 32 36 39 41
    COMMA (267) 9 23 43 68
    ASSIGNOP (268) 45 46 47 67
    RELOP (269) 50
    AND (270) 48
    OR (271) 49
    NOT (272) 57
    DOT (273) 61
    LP (274) 21 22 33 34 35 55 58 59
    RP (275) 21 22 33 34 35 55 58 59 65
    LB (276) 19 20 60 66
    RB (277) 19 20 60 66
    LC (278) 12 26
    RC (279) 12 26 27
    STRUCT (280) 12 13
    IF (281) 33 34
    ELSE (282) 34
    WHILE (283) 35
    RETURN (284) 32
    LOWER_ELSE (285)


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    Program <type_node> (32)
        on left: 1 2
        on right: 0
    ExtDefList <type_node> (33)
        on left: 3 4
        on right: 1 2 3
    ExtDef <type_node> (34)
        on left: 5 6 7
        on right: 3
    ExtDecList <type_node> (35)
        on left: 8 9
        on right: 5 9
    Specifier <type_node> (36)
        on left: 10 11
        on right: 5 6 7 25 39 40 41
    StructSpecifier <type_node> (37)
        on left: 12 13 14
        on right: 11
    OptTag <type_node> (38)
        on left: 15 16
        on right: 12
    Tag <type_node> (39)
        on left: 17
        on right: 13 14
    VarDec <type_node> (40)
        on left: 18 19 20
        on right: 8 9 19 20 25 44 45 46
    FunDec <type_node> (41)
        on left: 21 22
        on right: 7
    VarList <type_node> (42)
        on left: 23 24
        on right: 21 23
    ParamDec <type_node> (43)
        on left: 25
        on right: 23 24
    CompSt <type_node> (44)
        on left: 26 27
        on right: 7 31
    StmtList <type_node> (45)
        on left: 28 29
        on right: 26 28
    Stmt <type_node> (46)
        on left: 30 31 32 33 34 35 36
        on right: 28 33 34 35
    DefList <type_node> (47)
        on left: 37 38
        on right: 12 26 37
    Def <type_node> (48)
        on left: 39 40 41
        on right: 37
    DecList <type_node> (49)
        on left: 42 43
        on right: 39 40 43
    Dec <type_node> (50)
        on left: 44 45 46
        on right: 42 43
    Exp <type_node> (51)
        on left: 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67
        on right: 30 32 33 34 35 45 47 48 49 50 51 52 53 54 55 56 57 60 61 66 67 68 69
    Args <type_node> (52)
        on left: 68 69
        on right: 58 68


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end   reduce using rule 4 (ExtDefList)
    error  [reduce using rule 4 (ExtDefList)]

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

   14 StructSpecifier: error . Tag

    ID  shift, and go to state 9

    Tag  go to state 10


State 2

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 3

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag

    ID  shift, and go to state 11

    $default  reduce using rule 16 (OptTag)

    OptTag  go to state 12
    Tag     go to state 13


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 14


State 5

    1 Program: ExtDefList .
    2        | ExtDefList . error

    error  shift, and go to state 15

    $end  reduce using rule 1 (Program)


State 6

    3 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end   reduce using rule 4 (ExtDefList)
    error  [reduce using rule 4 (ExtDefList)]

    ExtDefList       go to state 16
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    5 ExtDef: Specifier . ExtDecList SEMI
    6       | Specifier . SEMI
    7       | Specifier . FunDec CompSt

    ID    shift, and go to state 17
    SEMI  shift, and go to state 18

    ExtDecList  go to state 19
    VarDec      go to state 20
    FunDec      go to state 21


State 8

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 9

   17 Tag: ID .

    $default  reduce using rule 17 (Tag)


State 10

   14 StructSpecifier: error Tag .

    $default  reduce using rule 14 (StructSpecifier)


State 11

   15 OptTag: ID .
   17 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 17 (Tag)


State 12

   12 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 22


State 13

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 14

    0 $accept: Program $end .

    $default  accept


State 15

    2 Program: ExtDefList error .

    $default  reduce using rule 2 (Program)


State 16

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 17

   18 VarDec: ID .
   21 FunDec: ID . LP VarList RP
   22       | ID . LP RP

    LP  shift, and go to state 23

    $default  reduce using rule 18 (VarDec)


State 18

    6 ExtDef: Specifier SEMI .

    $default  reduce using rule 6 (ExtDef)


State 19

    5 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 24


State 20

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB

    COMMA  shift, and go to state 25
    LB     shift, and go to state 26

    $default  reduce using rule 8 (ExtDecList)


State 21

    7 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 27
    LC     shift, and go to state 28

    CompSt  go to state 29


State 22

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 38 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 31
    Def              go to state 32


State 23

   21 FunDec: ID LP . VarList RP
   22       | ID LP . RP

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    RP      shift, and go to state 33
    STRUCT  shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 35
    ParamDec         go to state 36


State 24

    5 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 5 (ExtDef)


State 25

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 37

    ExtDecList  go to state 38
    VarDec      go to state 20


State 26

   19 VarDec: VarDec LB . INT RB
   20       | VarDec LB . error RB

    error  shift, and go to state 39
    INT    shift, and go to state 40


State 27

   27 CompSt: error . RC

    RC  shift, and go to state 41


State 28

   26 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 38 (DefList)]
    INT     reduce using rule 38 (DefList)
    FLOAT   reduce using rule 38 (DefList)
    ID      reduce using rule 38 (DefList)
    MINUS   reduce using rule 38 (DefList)
    NOT     reduce using rule 38 (DefList)
    LP      reduce using rule 38 (DefList)
    LC      reduce using rule 38 (DefList)
    RC      reduce using rule 38 (DefList)
    IF      reduce using rule 38 (DefList)
    WHILE   reduce using rule 38 (DefList)
    RETURN  reduce using rule 38 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 42
    Def              go to state 32


State 29

    7 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 7 (ExtDef)


State 30

   39 Def: Specifier . DecList SEMI
   40    | Specifier . DecList error
   41    | Specifier . error SEMI

    error  shift, and go to state 43
    ID     shift, and go to state 37

    VarDec   go to state 44
    DecList  go to state 45
    Dec      go to state 46


State 31

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 47


State 32

   37 DefList: Def . DefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 38 (DefList)]
    INT     reduce using rule 38 (DefList)
    FLOAT   reduce using rule 38 (DefList)
    ID      reduce using rule 38 (DefList)
    MINUS   reduce using rule 38 (DefList)
    NOT     reduce using rule 38 (DefList)
    LP      reduce using rule 38 (DefList)
    LC      reduce using rule 38 (DefList)
    RC      reduce using rule 38 (DefList)
    IF      reduce using rule 38 (DefList)
    WHILE   reduce using rule 38 (DefList)
    RETURN  reduce using rule 38 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 48
    Def              go to state 32


State 33

   22 FunDec: ID LP RP .

    $default  reduce using rule 22 (FunDec)


State 34

   25 ParamDec: Specifier . VarDec

    ID  shift, and go to state 37

    VarDec  go to state 49


State 35

   21 FunDec: ID LP VarList . RP

    RP  shift, and go to state 50


State 36

   23 VarList: ParamDec . COMMA VarList
   24        | ParamDec .

    COMMA  shift, and go to state 51

    $default  reduce using rule 24 (VarList)


State 37

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


State 38

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 39

   20 VarDec: VarDec LB error . RB

    RB  shift, and go to state 52


State 40

   19 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 53


State 41

   27 CompSt: error RC .

    $default  reduce using rule 27 (CompSt)


State 42

   26 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 54
    INT     shift, and go to state 55
    FLOAT   shift, and go to state 56
    ID      shift, and go to state 57
    MINUS   shift, and go to state 58
    NOT     shift, and go to state 59
    LP      shift, and go to state 60
    LC      shift, and go to state 28
    IF      shift, and go to state 61
    WHILE   shift, and go to state 62
    RETURN  shift, and go to state 63

    RC  reduce using rule 29 (StmtList)

    CompSt    go to state 64
    StmtList  go to state 65
    Stmt      go to state 66
    Exp       go to state 67


State 43

   41 Def: Specifier error . SEMI

    SEMI  shift, and go to state 68


State 44

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB
   44 Dec: VarDec .
   45    | VarDec . ASSIGNOP Exp
   46    | VarDec . ASSIGNOP error

    ASSIGNOP  shift, and go to state 69
    LB        shift, and go to state 26

    $default  reduce using rule 44 (Dec)


State 45

   39 Def: Specifier DecList . SEMI
   40    | Specifier DecList . error

    error  shift, and go to state 70
    SEMI   shift, and go to state 71


State 46

   42 DecList: Dec .
   43        | Dec . COMMA DecList

    COMMA  shift, and go to state 72

    $default  reduce using rule 42 (DecList)


State 47

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 48

   37 DefList: Def DefList .

    $default  reduce using rule 37 (DefList)


State 49

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB
   25 ParamDec: Specifier VarDec .

    LB  shift, and go to state 26

    $default  reduce using rule 25 (ParamDec)


State 50

   21 FunDec: ID LP VarList RP .

    $default  reduce using rule 21 (FunDec)


State 51

   23 VarList: ParamDec COMMA . VarList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 73
    ParamDec         go to state 36


State 52

   20 VarDec: VarDec LB error RB .

    $default  reduce using rule 20 (VarDec)


State 53

   19 VarDec: VarDec LB INT RB .

    $default  reduce using rule 19 (VarDec)


State 54

   27 CompSt: error . RC
   36 Stmt: error . SEMI
   65 Exp: error . RP

    SEMI  shift, and go to state 74
    RP    shift, and go to state 75
    RC    shift, and go to state 41


State 55

   63 Exp: INT .

    $default  reduce using rule 63 (Exp)


State 56

   64 Exp: FLOAT .

    $default  reduce using rule 64 (Exp)


State 57

   58 Exp: ID . LP Args RP
   59    | ID . LP RP
   62    | ID .

    LP  shift, and go to state 76

    $default  reduce using rule 62 (Exp)


State 58

   56 Exp: MINUS . Exp

    error  shift, and go to state 77
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 78


State 59

   57 Exp: NOT . Exp

    error  shift, and go to state 77
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 79


State 60

   55 Exp: LP . Exp RP

    error  shift, and go to state 77
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 80


State 61

   33 Stmt: IF . LP Exp RP Stmt
   34     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 81


State 62

   35 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 82


State 63

   32 Stmt: RETURN . Exp SEMI

    error  shift, and go to state 77
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 83


State 64

   31 Stmt: CompSt .

    $default  reduce using rule 31 (Stmt)


State 65

   26 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 84


State 66

   28 StmtList: Stmt . StmtList

    error   shift, and go to state 54
    INT     shift, and go to state 55
    FLOAT   shift, and go to state 56
    ID      shift, and go to state 57
    MINUS   shift, and go to state 58
    NOT     shift, and go to state 59
    LP      shift, and go to state 60
    LC      shift, and go to state 28
    IF      shift, and go to state 61
    WHILE   shift, and go to state 62
    RETURN  shift, and go to state 63

    RC  reduce using rule 29 (StmtList)

    CompSt    go to state 64
    StmtList  go to state 85
    Stmt      go to state 66
    Exp       go to state 67


State 67

   30 Stmt: Exp . SEMI
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   66    | Exp . LB error RB
   67    | Exp . ASSIGNOP error

    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    SEMI      shift, and go to state 90
    ASSIGNOP  shift, and go to state 91
    RELOP     shift, and go to state 92
    AND       shift, and go to state 93
    OR        shift, and go to state 94
    DOT       shift, and go to state 95
    LB        shift, and go to state 96


State 68

   41 Def: Specifier error SEMI .

    $default  reduce using rule 41 (Def)


State 69

   45 Dec: VarDec ASSIGNOP . Exp
   46    | VarDec ASSIGNOP . error

    error  shift, and go to state 97
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 98


State 70

   40 Def: Specifier DecList error .

    $default  reduce using rule 40 (Def)


State 71

   39 Def: Specifier DecList SEMI .

    $default  reduce using rule 39 (Def)


State 72

   43 DecList: Dec COMMA . DecList

    ID  shift, and go to state 37

    VarDec   go to state 44
    DecList  go to state 99
    Dec      go to state 46


State 73

   23 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 23 (VarList)


State 74

   36 Stmt: error SEMI .

    $default  reduce using rule 36 (Stmt)


State 75

   65 Exp: error RP .

    $default  reduce using rule 65 (Exp)


State 76

   58 Exp: ID LP . Args RP
   59    | ID LP . RP

    error  shift, and go to state 77
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    RP     shift, and go to state 100

    Exp   go to state 101
    Args  go to state 102


State 77

   65 Exp: error . RP

    RP  shift, and go to state 75


State 78

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   56    | MINUS Exp .
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   66    | Exp . LB error RB
   67    | Exp . ASSIGNOP error

    MINUS  shift, and go to state 87
    DOT    shift, and go to state 95
    LB     shift, and go to state 96

    $default  reduce using rule 56 (Exp)


State 79

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   57    | NOT Exp .
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   66    | Exp . LB error RB
   67    | Exp . ASSIGNOP error

    MINUS  shift, and go to state 87
    DOT    shift, and go to state 95
    LB     shift, and go to state 96

    $default  reduce using rule 57 (Exp)


State 80

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   55    | LP Exp . RP
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   66    | Exp . LB error RB
   67    | Exp . ASSIGNOP error

    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    ASSIGNOP  shift, and go to state 91
    RELOP     shift, and go to state 92
    AND       shift, and go to state 93
    OR        shift, and go to state 94
    DOT       shift, and go to state 95
    RP        shift, and go to state 103
    LB        shift, and go to state 96


State 81

   33 Stmt: IF LP . Exp RP Stmt
   34     | IF LP . Exp RP Stmt ELSE Stmt

    error  shift, and go to state 77
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 104


State 82

   35 Stmt: WHILE LP . Exp RP Stmt

    error  shift, and go to state 77
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 105


State 83

   32 Stmt: RETURN Exp . SEMI
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   66    | Exp . LB error RB
   67    | Exp . ASSIGNOP error

    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    SEMI      shift, and go to state 106
    ASSIGNOP  shift, and go to state 91
    RELOP     shift, and go to state 92
    AND       shift, and go to state 93
    OR        shift, and go to state 94
    DOT       shift, and go to state 95
    LB        shift, and go to state 96


State 84

   26 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 26 (CompSt)


State 85

   28 StmtList: Stmt StmtList .

    $default  reduce using rule 28 (StmtList)


State 86

   51 Exp: Exp PLUS . Exp

    error  shift, and go to state 77
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 107


State 87

   52 Exp: Exp MINUS . Exp

    error  shift, and go to state 77
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 108


State 88

   53 Exp: Exp STAR . Exp

    error  shift, and go to state 77
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 109


State 89

   54 Exp: Exp DIV . Exp

    error  shift, and go to state 77
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 110


State 90

   30 Stmt: Exp SEMI .

    $default  reduce using rule 30 (Stmt)


State 91

   47 Exp: Exp ASSIGNOP . Exp
   67    | Exp ASSIGNOP . error

    error  shift, and go to state 111
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 112


State 92

   50 Exp: Exp RELOP . Exp

    error  shift, and go to state 77
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 113


State 93

   48 Exp: Exp AND . Exp

    error  shift, and go to state 77
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 114


State 94

   49 Exp: Exp OR . Exp

    error  shift, and go to state 77
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 115


State 95

   61 Exp: Exp DOT . ID

    ID  shift, and go to state 116


State 96

   60 Exp: Exp LB . Exp RB
   66    | Exp LB . error RB

    error  shift, and go to state 117
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 118


State 97

   46 Dec: VarDec ASSIGNOP error .
   65 Exp: error . RP

    RP  shift, and go to state 75

    $default  reduce using rule 46 (Dec)


State 98

   45 Dec: VarDec ASSIGNOP Exp .
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   66    | Exp . LB error RB
   67    | Exp . ASSIGNOP error

    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    ASSIGNOP  shift, and go to state 91
    RELOP     shift, and go to state 92
    AND       shift, and go to state 93
    OR        shift, and go to state 94
    DOT       shift, and go to state 95
    LB        shift, and go to state 96

    $default  reduce using rule 45 (Dec)


State 99

   43 DecList: Dec COMMA DecList .

    $default  reduce using rule 43 (DecList)


State 100

   59 Exp: ID LP RP .

    $default  reduce using rule 59 (Exp)


State 101

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   66    | Exp . LB error RB
   67    | Exp . ASSIGNOP error
   68 Args: Exp . COMMA Args
   69     | Exp .

    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    COMMA     shift, and go to state 119
    ASSIGNOP  shift, and go to state 91
    RELOP     shift, and go to state 92
    AND       shift, and go to state 93
    OR        shift, and go to state 94
    DOT       shift, and go to state 95
    LB        shift, and go to state 96

    $default  reduce using rule 69 (Args)


State 102

   58 Exp: ID LP Args . RP

    RP  shift, and go to state 120


State 103

   55 Exp: LP Exp RP .

    $default  reduce using rule 55 (Exp)


State 104

   33 Stmt: IF LP Exp . RP Stmt
   34     | IF LP Exp . RP Stmt ELSE Stmt
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   66    | Exp . LB error RB
   67    | Exp . ASSIGNOP error

    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    ASSIGNOP  shift, and go to state 91
    RELOP     shift, and go to state 92
    AND       shift, and go to state 93
    OR        shift, and go to state 94
    DOT       shift, and go to state 95
    RP        shift, and go to state 121
    LB        shift, and go to state 96


State 105

   35 Stmt: WHILE LP Exp . RP Stmt
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   66    | Exp . LB error RB
   67    | Exp . ASSIGNOP error

    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    ASSIGNOP  shift, and go to state 91
    RELOP     shift, and go to state 92
    AND       shift, and go to state 93
    OR        shift, and go to state 94
    DOT       shift, and go to state 95
    RP        shift, and go to state 122
    LB        shift, and go to state 96


State 106

   32 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 32 (Stmt)


State 107

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   51    | Exp PLUS Exp .
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   66    | Exp . LB error RB
   67    | Exp . ASSIGNOP error

    MINUS  shift, and go to state 87
    STAR   shift, and go to state 88
    DIV    shift, and go to state 89
    DOT    shift, and go to state 95
    LB     shift, and go to state 96

    $default  reduce using rule 51 (Exp)


State 108

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   52    | Exp MINUS Exp .
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   66    | Exp . LB error RB
   67    | Exp . ASSIGNOP error

    MINUS  shift, and go to state 87
    DOT    shift, and go to state 95
    LB     shift, and go to state 96

    $default  reduce using rule 52 (Exp)


State 109
